# idmec

./: .gitignore  README.md  environment.yml
devel/: .catkin  _setup_util.py  local_setup.fish
devel/lib/ergodic_search/: distribution_2d_publisher
devel/lib/fly_order/: offboard
devel/lib/local_sensing_node/: pcl_render_node
devel/lib/multi_map_server/: multi_map_visualization
devel/lib/odom_visualization/: odom_visualization
devel/lib/pkgconfig/: cmake_utils.pc  ergodic_search.pc  fly_order.pc  local_sensing_node.pc  map_generator.pc  mockamap.pc  multi_map_server.pc  odom_visualization.pc  poscmd_2_odom.pc  pose_utils.pc  quadrotor_msgs.pc  rviz_plugins.pc  so3_control.pc  so3_quadrotor_simulator.pc  uav_utils.pc  waypoint_generator.pc
devel/lib/poscmd_2_odom/: poscmd_2_odom
devel/lib/so3_control/: control_example
devel/lib/so3_quadrotor_simulator/: quadrotor_simulator_so3
devel/lib/waypoint_generator/: waypoint_generator
install/: local_setup.sh  setup.sh
log/: latest_build
src/ergodic_search/case1/: ergodic_metric.xlsx  random_map_history.jsonl
src/ergodic_search/case2/: ergodic_metric.xlsx  random_map_history.jsonl
src/ergodic_search/case3/: ergodic_metric.xlsx  random_map_history.jsonl
src/fly_order/: CMakeLists.txt  package.xml
src/fly_order/config/: map_generator.yaml
src/fly_order/launch/: default.rviz  run_in_sim.launch  rviz.launch  rviz.rviz  simple_run.launch  simulator.xml  single_run_in_sim.launch  swarm.launch
src/fly_order/src/: offboard.cpp
src/multi_ergodic_search/: README.md  setup.cfg  setup.py
(+153 files in other folders)
